flux-typecheck/src/snapshots/flux_typecheck__tests__parse_basic.snap
---
source: flux-typecheck/src/tests.rs
expression: s
---
HirModule {
    db: Database {
        exprs: Arena {
            len: 1,
            data: [
                Spanned {
                    node: Int(
                        Int {
                            n: 0,
                            ty: UNType(
                                32,
                            ),
                        },
                    ),
                    span: Span {
                        range: 22..23,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ],
        },
        errors: [],
        file_id: FileId(
            0,
        ),
    },
    functions: [
        FnDecl {
            name: Some(
                "main",
            ),
            params: [],
            block: [
                Some(
                    Spanned {
                        node: VarDecl(
                            VarDecl {
                                ty: Spanned {
                                    node: UNType(
                                        32,
                                    ),
                                    span: Span {
                                        range: 22..23,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                                name: "x",
                                value: Idx::<Expr>>(0),
                            },
                        ),
                        span: Span {
                            range: 14..25,
                            file_id: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ],
            return_type: Spanned {
                node: VoidType,
                span: Span {
                    range: 0..0,
                    file_id: FileId(
                        0,
                    ),
                },
            },
        },
    ],
    types: [],
}
